--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^1.0.6",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
     "next": "latest",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
