--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^1.0.6",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.13.0",
     "moment": "^2.29.4",
     "next": "latest",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.21",
     "react-tailwindcss-datepicker": "^1.4.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
