--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
+    "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^1.0.6",
     "@mapbox/search-js-react": "^1.0.0-beta.14",
     "date-fns": "^2.29.3",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.21",
     "react-tailwindcss-datepicker": "^1.4.2",
     "tailwind-scrollbar-hide": "^1.1.7"
