--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.21",
     "react-tailwindcss-datepicker": "^1.4.2",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
