--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "baseUrl": ".",
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "components/Header.jsx", "features/auth/authActions.js"  ],
+    "**/*.tsx",
+    "components/Header.jsx",
+    "features/auth/authActions.js",
+    ".next/types/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
